--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     ],
     "routes": [
         {
-            "src": "src/(.*)",
+            "src": "/(.*)",
             "dest": "src/main.ts",
             "methods": [
                 "GET",
