--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "version": 2,
     "builds": [
         {
             "src": "src/main.ts",
@@ -13,7 +14,8 @@
                 "GET",
                 "POST",
                 "PUT",
-                "DELETE"
+                "DELETE",
+                "OPTIONS"
             ]
         }
     ]
